Fix minimize, maximize, and close buttons falling off screen

--- a/userChrome.css
+++ b/userChrome.css
@@ -7,5 +7,5 @@
 
 #nav-bar {
     margin-top: -42px;
-    padding: 1px 145px 2px 3px !important;
+    margin-right: 140px !important;
 }
